<resources>
    <string name="app_name">QuispeChristian12022021</string>
    <string name="tv_encabezado">Pedido</string>
    <string name="tv_idcodigo">Id producto</string>
    <string name="ev_idcodigo">Ingresar Producto</string>
    <string name="tv_idcliente">Id Cliente</string>
    <string name="et_cliente">Ingresar Cliente</string>
    <string name="tv_precio">Precio</string>
    <string name="tv_cantidad">Cantidad</string>
    <string name="ev_cantidad">Ingresar Cantidad</string>
    <string name="cb_iva">Incluye IVA</string>
    <string name="cb_ice">Incluye ICE</string>
    <string name="button_añadir">Añadir</string>
    <string name="button_quitar">Quitar</string>
    <string name="nuevo_pedido">Nuevo Pedido</string>
    <string name="button_Cargar">Cargar</string>
    <string name="tv_sub">Subtotal</string>
    <string name="tv_sub_iva">Subtotal IVA</string>
    <string name="tv_sub_ice">Subtotal ICE</string>
    <string name="total">Total</string>

    //CLIENTES
    <string name="tv_encabezado1">Clientes</string>
    <string name="tv_idclientec">Id Cliente</string>
    <string name="et_clientec">Ingresar Cliente</string>
    <string name="tv_nombrec">Nombre</string>
    <string name="et_nombrec">Ingresar Nombre</string>
    <string name="tv_direccionc">Direccion</string>
    <string name="et_direccionc">Ingresar Direccion</string>
    <string name="btn_buscarc">Buscar</string>
    <string name="btn_insertarc">Insertar</string>
    <string name="btn_siguientec">Siguiente</string>


    //PRODUCTOS
    <string name="tv_encabezado2">Productos</string>
    <string name="tv_idproductop">Id Producto</string>
    <string name="et_productop">Ingresar Id</string>
    <string name="tv_nombrep">Nombre</string>
    <string name="et_nombrep">Ingresar Producto</string>
    <string name="tv_preciop">Precio</string>
    <string name="et_preciop">Ingresar Precio</string>
    <string name="btn_buscarp">Buscar</string>
    <string name="btn_insertarp">Insertar</string>
    <string name="btn_siguientep">Siguiente</string>

</resources>
