<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_idcliente"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="132dp" />

    <Button
        android:id="@+id/btnCargar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Cargar"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="119dp" />

    <Button
        android:id="@+id/btnNuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_pedido"
        tools:layout_editor_absoluteX="286dp"
        tools:layout_editor_absoluteY="54dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_encabezado"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="2dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="84dp"
        android:layout_height="42dp"
        android:text="@string/tv_idcodigo"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="61dp" />

    <EditText
        android:id="@+id/edproducto"
        android:layout_width="202dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/ev_idcodigo"
        android:inputType="@string/ev_idcodigo"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="55dp" />

    <EditText
        android:id="@+id/edcliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_cliente"
        android:inputType="@string/et_cliente"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="119dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_cantidad"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="200dp" />

    <EditText
        android:id="@+id/edCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ev_cantidad"
        android:inputType="@string/ev_cantidad"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="184dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_precio"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="269dp" />

    <CheckBox
        android:id="@+id/chbIce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_ice"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="301dp" />

    <CheckBox
        android:id="@+id/chbIva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_iva"
        tools:layout_editor_absoluteX="231dp"
        tools:layout_editor_absoluteY="301dp" />

    <Button
        android:id="@+id/btnañadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_añadir"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="366dp" />

    <Button
        android:id="@+id/btnQuitar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_quitar"
        tools:layout_editor_absoluteX="238dp"
        tools:layout_editor_absoluteY="365dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:text="@string/tv_sub_iva"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="550dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_sub_ice"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="595dp" />

    <TextView
        android:id="@+id/txtIva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="248dp"
        tools:layout_editor_absoluteY="550dp" />

    <TextView
        android:id="@+id/textIce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="248dp"
        tools:layout_editor_absoluteY="595dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="639dp" />

    <TextView
        android:id="@+id/textTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="247dp"
        tools:layout_editor_absoluteY="639dp" />

</androidx.constraintlayout.widget.ConstraintLayout>