<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Clientes">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_encabezado1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_idclientec"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="88dp" />

    <EditText
        android:id="@+id/edtIdCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_clientec"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="78dp" />

    <EditText
        android:id="@+id/edtNombreCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_nombrec"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="148dp" />

    <EditText
        android:id="@+id/edtDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_direccionc"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="215dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_nombrec"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="161dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_direccionc"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="232dp" />

    <Button
        android:id="@+id/btnInsertar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_insertarc"
        tools:layout_editor_absoluteX="267dp"
        tools:layout_editor_absoluteY="307dp" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_buscarc"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="307dp" />

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_siguientec"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="374dp" />
</androidx.constraintlayout.widget.ConstraintLayout>