<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Productos">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_encabezado2"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="4dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_idproductop"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="85dp" />

    <EditText
        android:id="@+id/edtProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_productop"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="70dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_nombrep"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="155dp" />

    <EditText
        android:id="@+id/edtNombreProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_nombrep"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="145dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_preciop"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="241dp" />

    <EditText
        android:id="@+id/edtPrecioUnitario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_preciop"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="226dp" />

    <Button
        android:id="@+id/btnBuscarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_buscarp"
        tools:layout_editor_absoluteX="79dp"
        tools:layout_editor_absoluteY="331dp" />

    <Button
        android:id="@+id/btnInsertarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_insertarp"
        tools:layout_editor_absoluteX="251dp"
        tools:layout_editor_absoluteY="331dp" />

    <Button
        android:id="@+id/btnSiguienteP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_siguientep"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="421dp" />
</androidx.constraintlayout.widget.ConstraintLayout>